--- a/src/main/resources/templates/layouts/editview/editRejectionIssue.html
+++ b/src/main/resources/templates/layouts/editview/editRejectionIssue.html
@@ -256,6 +256,9 @@
 
 															<tbody>
 																<tr id="addr0">
+																<tr id="addr0"
+																		th:each="row, stat :${RejectionIsssue.listRejectionIssueDetail}">
+
 
 																	<!--   po number  -->
 
@@ -281,8 +284,9 @@
 																	<td><select id="orderItemPo0"
 																			class="form-control form-control-sm select orderItemContainerPo0"
 																			title="item"
+																		th:field="*{listRejectionIssueDetail[__${stat.index}__].item}"
+
 																			onchange="getOrderItemDetailForPo()"
-																			name="listRejectionIssueDetail[0].item">
 																			<option value="">Select</option>
 																		</select></td>
 																	<!--
@@ -306,7 +310,8 @@
 
 																	<td><input type="text" title="pending qty"
 																			class="form-control form-control-sm"
-																			name="listRejectionIssueDetail[0].uom">
+																		
+																			th:field="*{listRejectionIssueDetail[__${stat.index}__].uom}">
 																	</td>
 
 																	<!-- qty  -->
@@ -319,7 +324,8 @@
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
 																			class="form-control form-control-sm"
 																			title="net qty"
-																			name="listRejectionIssueDetail[0].qtyIss"
+																			
+																			th:field="*{listRejectionIssueDetail[__${stat.index}__].qtyIss}"
 																			step="0.25" value="0.00"></td>
 
 
@@ -327,8 +333,9 @@
 																	<td><input type="number" id="qtyOrder0"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
 																			class="form-control form-control-sm"
-																			title="issue rate"
-																			name="listPurchaseReturnDetail[0].issrate"
+																			title="iss rate"
+																			
+																			th:field="*{listRejectionIssueDetail[__${stat.index}__].issrate}"
 																			step="0.25" value="0.00"></td>
 
 
