--- a/src/main/resources/templates/layouts/Master/QuotationDetail.html
+++ b/src/main/resources/templates/layouts/Master/QuotationDetail.html
@@ -184,7 +184,7 @@
 																		style="color: red">*</label> <select
 																		class="form-control suppContainer"
 																		onchange="supplierInfo1()" title="supplier "
-																		id="supplierId" th:field="*{suplierCode}">
+																		id="supplierId" th:field="*{party}">
 																		<option value="">Select</option>
 																		<!-- 	<option th:each="supp :  ${listSupplier}"
 																			th:text="${supp.supplierName}"
