--- a/src/main/resources/templates/layouts/editview/editOpenIndent.html
+++ b/src/main/resources/templates/layouts/editview/editOpenIndent.html
@@ -79,7 +79,7 @@
 					<section class="content">
 
 						<!-- form start -->
-						<form role="form" th:action="@{/openindent/}" method="POST"
+						<form role="form" th:action="@{/openindent/update}" method="POST"
 							th:object="${openIndent}">
 
 
