--- a/src/main/resources/templates/layouts/editview/editGateEntry.html
+++ b/src/main/resources/templates/layouts/editview/editGateEntry.html
@@ -180,9 +180,36 @@
 												<!-- box 2 -->
 
 												<div class="box">
-													<h5 class="box-title">Other Detail</h5>
+													<h5 class="box-title">Vehicle Detail</h5>
 													<div class="box-body">
 
+														<div class="form-group col-md-4">
+															<label for="inputAddress">Type of Vehicle</label> <select
+																class="form-control" id="" title="vehicle type"
+																th:field="*{vehicleType}">
+																<option value="t">Truck</option>
+
+
+															</select>
+														</div>
+
+
+														<div class="form-group col-md-4">
+															<label class="form-label">Vehicle No.</label> <label
+																style="color: red">*</label> <input type="text"
+																class="form-control" placeholder="Vehicle No."
+																title="vehicle no." th:field="*{vehicleNumber}">
+														</div>
+
+
+														<div class="form-group col-md-4">
+															<label for="inputAddress">From</label>
+															<textarea class="form-control" placeholder="From"
+																title="from" th:field="*{from}"></textarea>
+
+
+
+														</div>
 
 														<div class="form-group col-md-4">
 															<label for="inputEmail4">G.R.Number</label> <input
@@ -206,24 +233,16 @@
 															</select>
 														</div> -->
 
+
+
+
 														<div class="form-group col-md-4">
-															<label for="inputAddress">Transporter Name</label> <input
+															<label for="inputPassword4">Phone Number</label> <input
 																type="text" class="form-control"
-																placeholder="Transporter Name" title="transporter name"
-																th:field="*{trCode}">
-
-
-
+																placeholder="Phone Number" title="remarks"
+																th:field="*{phoneNumber}">
 														</div>
 
-
-
-														<div class="form-group col-md-4">
-															<label class="form-label">Vehicle No.</label> <label
-																style="color: red">*</label> <input type="text"
-																class="form-control" placeholder="Vehicle No."
-																title="vehicle no." th:field="*{vehicleNumber}">
-														</div>
 
 
 														<div class="form-group col-md-4">
@@ -243,13 +262,67 @@
 												<!-- end box-2 -->
 
 
+												<!-- box 2 -->
+
+												<div class="box">
+													<h5 class="box-title">Time Detail</h5>
+													<div class="box-body">
+
+
+														<div class="form-group col-md-3">
+															<label for="inputPassword4">Time In</label> <input
+																type="time" class="form-control" placeholder="Time In"
+																title="time in" th:field="*{timeIn}">
+														</div>
+
+														<div class="form-group col-md-3">
+															<label for="inputPassword4">Time Out</label> <input
+																type="time" class="form-control" placeholder="Time Out"
+																title="time out" th:field="*{timeOut}">
+														</div>
+
+														<div class="form-group col-md-3">
+															<label for="inputPassword4">Voucher Number</label> <input
+																type="text" class="form-control"
+																th:field="*{voucherNumber}" placeholder="Voucher Number"
+																title="voucher number" readonly>
+														</div>
+
+
+														<div class="form-group col-md-3">
+															<label for="inputPassword4">Voucher Date</label> <input
+																th:field="*{voucherDate}" type="date"
+																class="form-control" title="voucher date" readonly>
+														</div>
+
+													</div>
+
+													<div class="row">
+
+														<input type="hidden" th:field="*{docFile}">
+														<div class="col-md-12">
+															<label class="form-label" for="customFile">Upload
+																Document</label> <input type="file" name="poFile"
+																class="form-control" id="customFile" /> <a
+																th:href="@{${gateEntry.docFile}}"
+																target="_blank">view file</a>
+														</div>
+
+													</div>
+
+													<!-- /.box-body -->
+
+												</div>
+												<!--end box-1-->
+
+
 
 
 
 
 
 												<!--detail box-->
-												<div class="box">
+												<!--< div class="box">
 
 													<h5>Item Details</h5>
 													<div class="box-body">
@@ -294,7 +367,7 @@
 																		th:each="row, stat :${gateEntry.gateEntryItemDetails}">
 
 
-																		<!--   po number  -->
+																		  po number 
 
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
@@ -307,14 +380,14 @@
 																					th:text="${po.poNumber}" th:value=" ${po.poNumber}"></option>
 
 																		</select></td>
-																		<!-- po date  -->
+																		po date 
 
 																		<td><input type="date"
 																			class="form-control form-control-sm"
 																			id="orderIndentDatePo0" title="order date"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].orderDate}"></td>
 
-																		<!-- item Code  -->
+																		item Code 
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
@@ -323,7 +396,7 @@
 
 
 
-																		<!-- item description  -->
+																		item description 
 
 																		<td><select id="orderItemPo"
 																			class="form-control form-control-sm select orderItemContainerPo"
@@ -337,33 +410,33 @@
 
 																		</select></td>
 
-																		<!-- pending qty  -->
+																		pending qty 
 
 																		<td><input type="number" title="pending qty"
 																			class="form-control form-control-sm"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].pendingQty}"></td>
 
-																		<!-- qty  -->
+																		qty 
 
 																		<td><input type="number" id="qtyOrder0"
 																			class="form-control form-control-sm" title="net qty"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].netQty}"></td>
 
-																		<!-- uom  -->
+																		uom 
 
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderItemuom" title="status"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].uom}"></td>
 
-																		<!-- incoming part sr no  -->
+																		incoming part sr no 
 
 																		<td><input type="text"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].incomingSrNo}"
 																			class="form-control form-control-sm" id="" title=""></td>
 
 
-																		<!-- claim part   -->
+																		claim part  
 
 																		<td><input type="text"
 																			th:field="*{gateEntryItemDetails[__${stat.index}__].claimSrNo}"
@@ -387,7 +460,7 @@
 														<input type="hidden" id="hidden_field"
 															th:value="${length}" />
 													</div>
-												</div>
+												</div> -->
 
 
 												<!--end detail box-->
