--- a/src/main/resources/templates/layouts/Master/rejectionIssue.html
+++ b/src/main/resources/templates/layouts/Master/rejectionIssue.html
@@ -112,7 +112,7 @@
 														<div class="form-group col-md-4">
 															<label for="inputEmail4">IssueNo.</label> <input type="text"
 																class="form-control" id="inputEmail4"
-																placeholder="IssueNo" th:field="*{IssNo}" readonly>
+																placeholder="IssueNo" th:field="*{IssNo}" readonly >
 														</div>
 
 														<div class="form-group col-md-4">
@@ -129,8 +129,7 @@
 
 														<div class="form-group col-md-4">
 															<label for="inputAddress">Requisition no.</label> <select
-																class="form-control" id=""
-																th:field="*{requisitionMaster}" title="">
+																class="form-control" id="" th:field="*{requisitionMaster}" title="">
 																<option value="p">Purchased Item </option>
 																<option value="re">Returned Item</option>
 																<option value="pe">Petty Item</option>
@@ -141,10 +140,10 @@
 
 
 														<div class="form-group col-md-4">
-															<label class="form-label">Requisition Date</label> <input
-																type="date" class="form-control" id="" title="gst type"
-																th:field="*{reqDate}">
-
+															<label class="form-label">Requisition Date</label> <input type="date"
+																class="form-control" id="" title="gst type"  th:field="*{reqDate}"
+																>
+															
 															</input>
 														</div>
 
@@ -153,13 +152,13 @@
 														<div class="form-group col-md-4">
 															<label for="inputEmail4"> MRN No.</label> <input type="text"
 																class="form-control" id="inputEmail4"
-																placeholder="MRN No">
+																placeholder="MRN No"  >
 														</div>
 
 
 														<div class="form-group col-md-4">
-															<label class="form-label">MRN Date</label> <input
-																type="date" class="form-control" id="" title="Mrn">
+															<label class="form-label">MRN Date</label> <input type="date"
+																class="form-control" id="" title="Mrn" >
 
 															</input>
 														</div>
@@ -236,9 +235,9 @@
 																<tr>
 
 
-																	<!--
+
 																	<th scope="col" class="text-center"
-																		style="width: 90px;">Sr.No</th>-->
+																		style="width: 90px;">Sr.No</th>
 																	<th scope="col" class="text-center"
 																		style="width: 90px;">Item Code<span
 																			style="color: red">*</span></th>
@@ -263,73 +262,62 @@
 
 																	</select></td>
 																	<!-- po date  -->
-																	<!--
+
 																	<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderIndentDatePo0" title="order date"
-																			name="listRejectionIssueDetail[0].orderDate"
+																			name="gateEntryItemDetails[0].orderDate"
 																			readonly></td>
-																			
--->
 
-
-																	<td><input type="text"
-																			class="form-control form-control-sm"
-																			id="orderItemuom0" title="status"></td>
 																	<!-- item code  -->
 
 																	<td><select id="orderItemPo0"
 																			class="form-control form-control-sm select orderItemContainerPo0"
-																			title="item"
+																			required title="item"
 																			onchange="getOrderItemDetailForPo()"
-																			name="listRejectionIssueDetail[0].item">
+																			name="gateEntryItemDetails[0].item">
 																			<option value="">Select</option>
 																		</select></td>
-																	<!--
+
 																	<!-- item description  -->
-																	<!--
+
 																	<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="orderItemCode0" title="item description"
-																			name="listRejectionIssueDetail[0].itemDescription"
+																			name="gateEntryItemDetails[0].itemDescription"
 																			readonly></td>
--->
 
-																	<!-- uom  -->
+																	<!-- pending qty  -->
 
-
-
-
-																	<!--  qty   -->
-
-
-
-																	<td><input type="text" title="pending qty"
+																	<td><input type="number" title="pending qty"
 																			class="form-control form-control-sm"
-																			name="listRejectionIssueDetail[0].uom">
+																			name="gateEntryItemDetails[0].pendingQty">
 																	</td>
 
 																	<!-- qty  -->
-
-
-
-
 
 																	<td><input type="number" id="qtyOrder0"
 																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
 																			class="form-control form-control-sm"
 																			title="net qty"
-																			name="listRejectionIssueDetail[0].qtyIss"
+																			name="gateEntryItemDetails[0].netQty"
 																			step="0.25" value="0.00"></td>
+
+																	<!-- uom  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm"
+																			id="orderItemuom0" title="status"
+																			name="gateEntryItemDetails[0].uom"></td>
+
+																	<!-- incoming part sr no  -->
+
+																	<td><input type="text"
+																			class="form-control form-control-sm" id=""
+																			title=""></td>
 
 
 																	<!-- claim part   -->
-																	<td><input type="number" id="qtyOrder0"
-																			onchange="(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)"
-																			class="form-control form-control-sm"
-																			title="issue rate"
-																			name="listPurchaseReturnDetail[0].issrate"
-																			step="0.25" value="0.00"></td>
 
 
 
@@ -558,22 +546,21 @@
 
 										"<td><select class='form-control poContainer" + i + "  form-control-sm select'  id='orderIndentNumberPo" + i + "'  name='gateEntryItemDetails[" + i + "].purchaseOrder' title='indent number' onchange='getOrderIndentDetailPo()' required></select></td>"
 
+										/*  po date */
+										+ "<td><input type='date' class='form-control form-control-sm'  id='orderIndentDatePo" + i + "' title='order date'name='gateEntryItemDetails[" + i + "].orderDate' readonly></td>"
+
 										/*  item code */
 										+ "<td><select id='orderItemPo" + i + "' class='form-control form-control-sm select orderItemContainerPo" + i + "' required title='item' onchange='getOrderItemDetailForPo()' name='gateEntryItemDetails[" + i + "].item'><option value=''>Select</option></select></td>"
 
+										/* item description  */
+										+ "<td><input type='text'class='form-control form-control-sm'id='orderItemCode" + i + "' title='item description'name='gateEntryItemDetails[" + i + "].itemDescription'readonly></td>"
 
-
-										/*  uom*/
-										+ "<td><input type='text'class='form-control form-control-sm'id='orderItemuom" + i + "' title='status'name='gateEntryItemDetails[" + i + "].uom'></td>"
-
-
-										< !--/* item description  */
-										"<td><input type='text'class='form-control form-control-sm'id='orderItemCode" + i + "' title='item description'name='gateEntryItemDetails[" + i + "].itemDescription'readonly></td>"
 
 										/*  qty */
 										+ "<td><input type='number' id='qtyOrder" + i + "' class='form-control form-control-sm' title='net qty'name='gateEntryItemDetails[" + i + "].netQty' onchange=''(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)''  step='0.25' value='0.00'></td>"
 
-										+ "<td><input type='number' id='qtyOrder" + i + "' class='form-control form-control-sm' title='net qty'name='gateEntryItemDetails[" + i + "].netQty' onchange=''(function(el){el.value=parseFloat(el.value).toFixed(2);})(this)''  step='0.25' value='0.00'></td>"
+										/*  uom*/
+										+ "<td><input type='text'class='form-control form-control-sm'id='orderItemuom" + i + "' title='status'name='gateEntryItemDetails[" + i + "].uom'></td>"
 
 										/* incoming part sr no  */
 										+ "<td><input type='text'class='form-control form-control-sm' id='' title=''></td>"
